--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^13.12.0",
+    "xlsx": "^0.18.5"
   },
   "name": "project2",
   "version": "1.0.0",
